[NOJIRA-bol-assesment] - complete setup game, upgrade response model in put move api, start implementing move api business logic
